Fixed more api issues
